@@ -26,7 +26,7 @@
       "develop" : {
          "requires" : {
             "Dist::Zilla" : "5.020",
-            "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003002",
+            "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003004",
             "Dist::Zilla::Plugin::Authority" : "0",
             "Dist::Zilla::Plugin::AutoPrereqs" : "5.020",
             "Dist::Zilla::Plugin::Bootstrap::lib" : "1.001000",
@@ -122,7 +122,7 @@
             "Carp" : "0",
             "Dist::Zilla" : "5.020",
             "Dist::Zilla::File::FromCode" : "5.020",
-            "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003002",
+            "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003004",
             "Dist::Zilla::Plugin::Authority" : "1.006",
             "Dist::Zilla::Plugin::AutoPrereqs" : "5.020",
             "Dist::Zilla::Plugin::Bootstrap::lib" : "1.001000",
@@ -277,7 +277,7 @@
          "Dist::Zilla" : "5.020",
          "Dist::Zilla::App::Command::bakeini" : "0.001002",
          "Dist::Zilla::File::FromCode" : "5.020",
-         "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003002",
+         "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" : "0.003004",
          "Dist::Zilla::Plugin::Authority" : "1.006",
          "Dist::Zilla::Plugin::AutoPrereqs" : "5.020",
          "Dist::Zilla::Plugin::Bootstrap::lib" : "1.001000",
@@ -781,7 +781,7 @@
          {
             "class" : "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes",
             "name" : "@Author::KENTNL/Author::KENTNL::RecommendFixes",
-            "version" : "0.003002"
+            "version" : "0.003004"
          },
          {
             "class" : "Dist::Zilla::Plugin::ReadmeFromPod",
