@@ -28,7 +28,7 @@ my %WriteMakefileArgs = (
     "Carp" => 0,
     "Dist::Zilla" => "5.020",
     "Dist::Zilla::File::FromCode" => "5.020",
-    "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" => "0.003002",
+    "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" => "0.003004",
     "Dist::Zilla::Plugin::Authority" => "1.006",
     "Dist::Zilla::Plugin::AutoPrereqs" => "5.020",
     "Dist::Zilla::Plugin::Bootstrap::lib" => "1.001000",
@@ -138,7 +138,7 @@ my %FallbackPrereqs = (
   "Carp" => 0,
   "Dist::Zilla" => "5.020",
   "Dist::Zilla::File::FromCode" => "5.020",
-  "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" => "0.003002",
+  "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" => "0.003004",
   "Dist::Zilla::Plugin::Authority" => "1.006",
   "Dist::Zilla::Plugin::AutoPrereqs" => "5.020",
   "Dist::Zilla::Plugin::Bootstrap::lib" => "1.001000",
