@@ -11,7 +11,7 @@ do { my $x = {
        'develop' => {
                       'requires' => {
                                       'Dist::Zilla' => '5.020',
-                                      'Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes' => '0.003002',
+                                      'Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes' => '0.003004',
                                       'Dist::Zilla::Plugin::Authority' => '0',
                                       'Dist::Zilla::Plugin::AutoPrereqs' => '5.020',
                                       'Dist::Zilla::Plugin::Bootstrap::lib' => '1.001000',
@@ -107,7 +107,7 @@ do { my $x = {
                                       'Carp' => '0',
                                       'Dist::Zilla' => '5.020',
                                       'Dist::Zilla::File::FromCode' => '5.020',
-                                      'Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes' => '0.003002',
+                                      'Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes' => '0.003004',
                                       'Dist::Zilla::Plugin::Authority' => '1.006',
                                       'Dist::Zilla::Plugin::AutoPrereqs' => '5.020',
                                       'Dist::Zilla::Plugin::Bootstrap::lib' => '1.001000',
